# vs-dfttest2-api4

./: CMakeLists.txt  README.md  hatch_build.py  pyproject.toml
.github/workflows/: windows.yml
cuda_source/: source.cpp
tools/: ci_build_windows.py  package_plugin_zip.py  smoke_installed_wheel.py  smoke_load_artifact.py
